--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Namamu. Dibuat dengan ❤️ dan JavaScript.</p>
+      <p>&copy; 2025 Editor.</p>
     </div>
   </footer>
 
